ingress/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-test-ingress
  labels:
    tier: test
    app: react
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.reacttest.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: react-svc-test
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-prod-ingress
  labels:
    tier: production
    app: react
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.reactprod.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: react-svc-prod
            port: 
              number: 80
